# trader

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: example.ini
src/common/: config.cpp  config.hpp  logger.cpp  logger.hpp
src/data_feeder/: main.cpp
src/net/: tcp_client.cpp  tcp_client.hpp  udp_receiver.cpp  udp_receiver.hpp
src/oms/: oms.cpp  oms.hpp  order_types.hpp
src/oms_rms/: main.cpp
src/rms/: rms.cpp  rms.hpp
tools/: tap_mock.cpp  udp_send.cpp
